[package]
name = "solana-secp256k1-ecdsa"
description = "Sign and verify Secp256k1 ECDSA signatures in SVM"
authors = ["Dean Little <@deanmlittle>"]
version = "0.1.1"
edition = "2021"
license = "MIT"

[features]
default = ["esm", "bsm", "sign"]
sign = ["solana-rfc6979"]
bsm = ["sha256"]
esm = ["keccak", "sha256", "itoa"]
keccak = ["solana-nostd-keccak"]
sha256 = ["solana-nostd-sha256"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
itoa = { version = "1.0.17", optional = true }
solana-nostd-secp256k1-recover = "0.1.1"
solana-secp256k1 = "0.1.6"
solana-nostd-sha256 = { version = "0.1.3", optional = true }
solana-nostd-keccak = { version = "0.1.3", optional = true }
solana-rfc6979 = { version = "0.2.1", optional = true }